      in the lens language. We used to handle constructs like "\\" and
      /\\\\/ incorrectly. (Issue #495)
  - API changes
    * add function aug_ns_attr to allow iterating through a nodeset
      quickly. See examples/dump.c for an example of how to use them
      instead of aug_get, aug_label etc. and for a way to measure
      performance gains.
  - Lens changes/additions
    * Exports: relax the rules for the path at the beginning of a line so
      that double-quoted paths are legal, too
    * Httpd: handle empty comments with a continuation line (Issue #423);
      handle '>""' in a directive properly (Issue #429); make space between
      quoted arguments optional (Issue #435); accept quoted strings as part
      of bare arguments (Issue #470)
    * Oz: New lense for /etc/oz/oz.cnf
    * Rsyslog: allow spaces before the # starting a comment; allow comments
      inside config statements like 'module'
    * Sshd: split HostKeyAlgorithms into list of values
    * Syslog: allow spaces before the # starting a comment

1.8.1 - 2017-08-17
  - General changes/addition
    * Fix error in handling escaped whitespace at the end of path expressions
      (addresses CVE-2017-7555)

1.8.0 - 2017-03-20
  - General changes/additions
    * augtool: add a 'source' command exposing the aug_source API call
    * augtool: add a 'context' command to make changing into a node more
      discoverable
    * augtool: add an 'info' command to print important information
    * augtool: dramatically reduce memory consumption when all lenses are
      loaded by more aggressively releasing temporary data structures.  On
      my machine, maximum memory usage of 'augtool -L' drops from roughly
      90MB to about 20MB. This will not change the amount of memory used
      when only specific lenses are used, only the default behavior of
      loading all lenses, i.e., when -A is not passed.
    * make building augtool statically possible (Jörg Krause)